[package]
name = "driver_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
pbr = "1.0.3"
rayon = "1.5.1"
is_executable = "0.1.2"
term_size = "0.3.2"
[build-dependencies]
winres = "0.1"

